--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,17 +2,62 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+<div class="hero"></div>
+<div class="u-wrapper">
+  <div class="img-iphone">
+    <img src="images/phones.png" alt="">
+  </div>
+  <div class="content">
+    <div class="content__title">
+      <img src="images/brand.png" alt="">
+      <button>
+        <p>Log in</p>
+      </button>
+    </div>
+    <div class="content__text">
+      <h1>Capture and Share <br> the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <img src="images/badge-iphone.png" alt="">
+      <img src="images/badge-android.png" alt="">
+
+    </div>
+  </div>
+
+</div>
+<footer class="u-wrapper u-wrapper--small">
+  <nav>
+    <ul class="footer">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="footer__copy">&copy; 2014 Instagram</li>
+    </ul>
+  </nav>
+</footer>
+
+<!--   Instagram
+
+  
+
+  
+
+  
+
+  
 
   Download on the App Store
   Get it on Google Play
@@ -26,6 +71,6 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
 </body>
 </html>
