--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,20 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  <div id="telefono">
+    <img src="images/phones.png">
+  </div id="caja">
+  <div id="fondo-azul"></div>
+  <div id="fondo-blanco">
+  <div>
+    <div id="logo">
+      <img src="images/brand.png">
+      <div id="home">
+        <img src="images/home.png">
+      </div>
+    </div>
+    <div id="parrafo">
 
-  Capture and Share the World's Moments
+      <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      Oh yeah, did we mention it's free?
+     </p>
+    </div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+    Download on the App Store
+    Get it on Google Play
+  </div>
+
+
 
   About Us
   Support
