TRABAJO CSS DIA 2

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet"  href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="movil">
+  <img src="images/phones.png" alt=""></div>
 
-  Capture and Share the World's Moments
+  <div id="login"><img src="images/home.png" alt="">Log in </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="texto">
+    <h3>Capture and Share the World's Moments</h3>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.<br><br>
 
-  Oh yeah, did we mention it's free?
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <br><br>
+    Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    Download on the App Store
+    Get it on Google Play<br><br><br>
+  <div><img src="images/badge-android.png" alt=""><img src="images/badge-iphone.png" alt=""></div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div id="instagram"><img src="images/brand.png" alt=""></div>
 
-  &copy; 2014 Instagram
+
+
+<div id="fondo_superior"></div>
+
+<div id="fondo_inferior"></div>
+
+<div id="list">
+  <ul>
+    <li><strong>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press<li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</strong></li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+
+
+</div>
+
+
+
+
 </body>
 </html>
