--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="/Users/carlos/prework/code/labs/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="backgroundblue">
+
+  </div>
+  <div class="container">
+  <div class="images">
+<img src="/Users/carlos/prework/code/labs/lab-css-instagram-clone/starter-code/images/phones.png">
+  </div>
+<div class ="contentcontainer">
+  <div class="contentimages">
+    <img src="/Users/carlos/prework/code/labs/lab-css-instagram-clone/starter-code/images/brand.png">
+    <div class="login">
+      <img id="home"src="/Users/carlos/prework/code/labs/lab-css-instagram-clone/starter-code/images/home.png">
+      Login
+    </div>
+  </div>
+<div class= "text">
+  <h2>Capture and Share the World's Moments</h2>
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+</div>
+<div class="images">
+  <img src="/Users/carlos/prework/code/labs/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
+  <img src="/Users/carlos/prework/code/labs/lab-css-instagram-clone/starter-code/images/badge-android.png">
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+</div>
+</div>
+  <div class= "footer">
+    <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li id ="copyright"> &copy; 2014 Instagram</li>
+    </ul>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
 </body>
 </html>
