--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="/home/andrei/prework/code/labs/semana1/dia2/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="primerdiv">
 
-  Capture and Share the World's Moments
+    <div class="imagen-tlf">
+      <img src="./images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="contenido-flotante">
+      <img src="./images/brand.png">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="textoflotante">
+      <h2 class="portada"> Capture and Share the World's Moments </h2>
+      <p class="texto" >
+      Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+      Oh yeah, did we mention it's free?
+      </p>
+      <div class="images-brid">
+      <img src="./images/badge-iphone.png">
+      <img src="./images/badge-android.png">
+    </div>
+    </p>
+      </div>
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </div>
+  <div class="segundiv">
 
-  &copy; 2014 Instagram
+
+  </div>
+
+  <div class="footer">
+
+  <ul>
+     <li>About Us</li>
+      <li>Support</li>
+       <li> Blog </li>
+        <li>Press </li>
+        <li>AP</li></li>
+         <li>Jobs</li>
+          <li>Privacy </li>
+           <li>Terms </li>
+              <li id="copyright">&copy; 2014 Instagram</li>
+  </ul>
+</div>
 </body>
 </html>
