--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="phones-container">
+      <img src="images/phones.png"> </img>
+    </div>
+    <div class="home-container">
+      <div class="home-header">
+        <img class="instagram-logo" src="images/brand.png"> </img>
+        <button class="instagram-login">
+          <img class="image-instagram-login" src="images/home.png"> </img>
+          <p class="text-instagram-login"> Log in </p>
+        </button>
+      </div>
+      <div class="home-text">
+        <h1 class="title-home-text">Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="home-buttons">
+        <button class="app-store">
+          <img class="image-app-store" src="images/badge-iphone.png"> </img>
+        </button>
+        <button class="google-play">
+          <img class="image-google-play" src="images/badge-android.png"> </img>
+        </button>
+      </div>
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <ul class="navigator">
+    <li><a>About Us</a></li>
+    <li><a>Support</a></li>
+    <li><a>Blog</a></li>
+    <li><a>Press</a></li>
+    <li><a>API</a></li>
+    <li><a>Jobs</a></li>
+    <li><a>Privacy</a></li>
+    <li><a>Terms</a></li>
+    <li>&copy;  2014 Instagram</li>
+  </ul>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
 </body>
 </html>
