--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div>
+    <div class="blue-box">
 
-  Capture and Share the World's Moments
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div "content-box">
+    <div class="phones-container">
+      <img class="phones-photo" src="images/phones.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="right-box">
+    <div>
+      <img class="brand" src="images/brand.png">
+      <button class="log-in"><img class="home-img" src="images/home.png">Log in</button>
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="frame">
 
-  Download on the App Store
-  Get it on Google Play
+      <h3 class="heading">Capture and Share the World's Moments</h3>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </p>
 
-  &copy; 2014 Instagram
+      <p>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+        Oh yeah, did we mention it's free?
+
+        Download on the App Store
+        Get it on Google Play
+      </p>
+
+      <img class="badge" src="images/badge-iphone.png">
+      <img class="badge" src="images/badge-android.png">
+  </div>
+
+  <footer>
+    ABOUT US
+    SUPPORT
+    BLOG
+    PRESS
+    API
+    JOBS
+    PRIVACY
+    TERMS
+
+    <span class="copyright">&copy; 2014 Instagram</span>
+  </footer>
+</div>
 </body>
 </html>
