--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+  </header>
 
-  Capture and Share the World's Moments
+  <section class="center-box">
+    <div id="phones">
+      <img src="./images/phones.png">
+    </div>
+    <div id="caja">
+      <div id="logo">
+        <img src="./images/brand.png">
+      </div>
+      <div id="login">
+        <img src="./images/home.png" alt="">
+        <b>Log in</b>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div id="texto">
+      <h1 id="titulo">Capture and Share<br> the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+      <div id="apps">
+        <img src="./images/badge-iphone.png">
+        <img src="./images/badge-android.png" id="android">
+      </div>
+      </div>
+    </div>
+
+    <section class="footer">
+      <p class="link">About Us</p>
+      <p class="link">Support</p>
+      <p class="link">Blog</p>
+      <p class="link">Press</p>
+      <p class="link">API</p>
+      <p class="link">Jobs</p>
+      <p class="link">Privacy</p>
+      <p class="link">Terms</p>
+
+      <p id="copy">&copy; 2014 Instagram</p>
+    </section>
+
+  </section>
+
+
+
+
 </body>
 </html>
