--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,46 +5,42 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div id="telefono">
-    <img src="images/phones.png">
-  </div id="caja">
   <div id="fondo-azul"></div>
-  <div id="fondo-blanco">
-  <div>
-    <div id="logo">
-      <img src="images/brand.png">
-      <div id="home">
-        <img src="images/home.png">
+  <div id="caja">
+    <div class="main">
+      <div id="caja-telefono">
+        <img src="images/phones.png">
+      </div>
+      <div id="caja-parrafo">
+        <div id="logo">
+          <img src="images/brand.png">
+          <img src="images/home.png">
+        </div>
+        <div id="parrafo">
+
+          <h1>Capture and Share the World's Moments</h1>
+
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+            Oh yeah, did we mention it's free?
+          </p>
+
+        </div>
       </div>
     </div>
-    <div id="parrafo">
-
-      <h1>Capture and Share the World's Moments</h1>
-
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-      Oh yeah, did we mention it's free?
-     </p>
-    </div>
-  </div>
-
-    Download on the App Store
-    Get it on Google Play
-  </div>
-
-
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+     <footer>
+       About Us
+       Support
+       Blog
+       Press
+       API
+       Jobs
+       Privacy
+       Terms
+       &copy; 2014 Instagram
+     </footer>
+   </div>
 </body>
 </html>
