--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="general-container">
+  <div class="left-bar">
+    <img src="images/phones.png">
+  </div>
+  <div class="main-content">
+    <div class="left-bar">
+      <img src="images/brand.png">
+    </div>
+   
+      <div id="login-button">  
+        <img src="images/home.png"> Log in
+      </div>
+  
+    <div id="text-and-badges">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="content-header">Capture and Share the World's Moments</div>
+      <div >
+     <p class="content-text">Instagram is a <strong>fast, beautiful and fun</strong> way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p class="content-text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <p class="content-text">Oh yeah, did we mention it's free?
+  </txt>
+  <div>
+    <div class="left-bar half-width" >
+      <img src='images/badge-iphone.png'>
+    </div>
+   <div class="left-bar half-width" >
+      <img  src='images/badge-android.png'>
+   </div>
+  </div>
+  </div>
+    </div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div>
+  
+<div id="footer">
+<nav class="footer-links">
+  About Us |
+  Support |
+  Blog |
+  Press |
+  API |
+  Jobs |
+  Privacy |
+  Terms 
+   
+  </nav>
+      &copy; 2014 Instagram
+</div>
+ 
 </body>
 </html>
