--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <head>
+        <title>Instagram</title>
+        <link href="css/main.css" rel="stylesheet"/>
+    </head>
+    <body>
+        <div class="page-wrapper">
+            <div class="content-container">
+                <img class="phone-image" src="images/phones.png" />
+                <div class="right-block">
+                    <img src="images/brand.png"/>
+                    <a class="button" href="#"><span class="icon"> </span> Log in</a>
+                    <div class="text-dialog">
+                        <h1 class="text-title">Capture and Share the World's Moments</h1>
+                        <p>
+                            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                        </p>
+                        <p>
+                            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. 
+                            You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                            Oh yeah, did we mention it's free?
+                        </p>
+                        <img class="badge-iphone" src="images/badge-iphone.png" />
+                        <img class="badge-android" src="images/badge-android.png" />
+                    </div>
+                </div>
+            </div>
+                <div class="footer-container">
+                    <ul class="footer-nav">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Press</a></li>
+                        <li><a href="#">API</a></li>
+                        <li><a href="#">Jobs</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Terms</a></li>
+                        <li><span class="copyright">&copy; 2014 Instagram</span></li>
+                    </ul>
+                </div>
+        </div>
+    </body>
 </html>
