--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,70 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="content">
+    <div class="header">
+    </div>
+    <div class="middleDiv">
+    </div>
+    <div class="footer">
+      <ul>
+      <li>About Us
+      <li>Support
+      <li>Blog
+      <li>Press
+      <li>API
+      <li>Jobs
+      <li>Privacy
+      <li>Terms
+      <li><span>&copy; 2014 Instagram</span>
+      </ul>
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="floatDiv">
+    <div class="phone">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div class="card">
+      <div class="cardHead">
+        <div id="brand">
+          <img src="images/brand.png" alt="">
+        </div>
+        <div class="button">
+          <div class="buttonContent">
+          <img src="images/home.png" alt="">
+          Log In
+          </div>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="cardContent">
+        <p id="cardTitle">
+          Capture and Share<br>
+          the World's Moments
+        </p>
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <div class="cardFooter">
+        <img src="images/badge-iphone.png" alt="">
+        <img src="images/badge-android.png" alt="">
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
