--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link type="text/css" rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div id="bluetop">
+
+  <div id="phones-photo">
+    <img src="images/phones.png"/>
+  </div>
+  <div id="brand">
+    <img src="images/brand.png"/>
+    <div id="house">
+      <img src="images/home.png">
+    </div>
+  </div>
+  <div>
+
+  </div>
+  <div id="text">
 
   Capture and Share the World's Moments
 
@@ -14,18 +29,25 @@
 
   Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div >
 
-  &copy; 2014 Instagram
+    Download on the App Store
+    Get it on Google Play
+
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+
+    &copy; 2014 Instagram
+
+  </div>
+</div>
 </body>
 </html>
