--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link type = "text/css" rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="phones">
+    <img src = "images/phones.png" >
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <section class = "whole">
+    <section class = "brand">
+        <img src = "images/brand.png">
+        <section class = "home">
+        <img src = "images/home.png">
+        Log in
+        </section>
+    </section>
 
-  Oh yeah, did we mention it's free?
+    <section class= "content">
+      <section class = "frame">
+        <img src= "images/frame.png">
+      </section>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Capture and Share the World's Moments
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+      Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+      Oh yeah, did we mention it's free?
+    </p>
+     </section>
+
+     <section class= "call">
+      <img src = "images/badge-iphone.png">
+      <img src = "images/badge-android.png">
+     </section>
+  </section>
+
+     <section class = "menu">
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+    </section>
+
+    &copy; 2014 Instagram
+
 </body>
 </html>
