Instagram Clone HTML & CSS
Version

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="headerBlue">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <main id="container">
+    <div id="phone">
+      <img src="images/phones.png" alt="Phones" />
+    </div>
+    <div class="asideWrapper">
+      <div class="asideHead">
+        <div class="brand">
+          <img src="images/brand.png" alt="Instagram"/>
+        </div>
+        <div class="login">
+          <button>
+            <img src="images/home.png"/>
+            <p>Log in</p>
+          </button>
+        </div>
+      </div>
+      <div class="content">
+        <img src="images/frame.png" />
+        <div class="infoBox">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+          Oh yeah, did we mention it's free?</p>
+          <div class="downloads">
+            <img src="images/badge-iphone.png" />
+            <img src="images/badge-android.png" />
+          </div>
+        </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div>
+    </div>
+  </main>
 
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li class="footerMenu">About Us</li>
+      <li class="footerMenu">Support</li>
+      <li class="footerMenu">Blog</li>
+      <li class="footerMenu">Press</li>
+      <li class="footerMenu">API</li>
+      <li class="footerMenu">Jobs</li>
+      <li class="footerMenu">Privacy</li>
+      <li class="footerMenu">Terms</li>
+      <li class="footerMenu copy">&copy; 2014 Instagram</li>
+    </ul>
+
+  </footer>
+
+
+
+
+
+
+
 </body>
 </html>
