--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+    <div id="intro">
+      <h1>Instagram</h1>
+      <button id="home"><img src="images/home.png" alt="home icon">Log in</button>
+    </div>
+  </header>
+  <main>
 
-  Capture and Share the World's Moments
+  <section id="phones">
+  </section>
+    <section id="text-container">
+        <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <button class="lower-button" id="app-store"><span>Download on the App Store</span></button>
+        <button class="lower-button" id="google-play"><span>Get it on Google Play</span></button>
+    </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li><span>&copy; 2014 Instagram</span></li>
+      </ul>
+    </footer>
+  </main>
 </body>
 </html>
