--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div class="fondo"></div>
 
-  Capture and Share the World's Moments
+<div class="contenedor">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="content_left">
+        <img class="phone" src="images/phones.png" alt="">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+    <div id="content_right">
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="content_right_01">
+        <img class="brand" src="images/brand.png" alt="">
+        <div class="login">
+          <img  src="images/home.png" alt="">Log in
+        </div>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="content_right_02">
+        <h2>Capture and Share</h2>
+        <h2>the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="">
+        <img src="images/badge-android.png" alt="">
+      </div>
 
-  &copy; 2014 Instagram
+    </div>
+
+    <div class="footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+</div>
+
 </body>
 </html>
