--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,24 +22,29 @@
 
     <section class= "content">
       <section class = "frame">
-        <img src= "images/frame.png">
-      </section>
-
-      <p>Capture and Share the World's Moments
+        <img src="images/frame.png">
 
 
-      Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        <section class ="paragraph">
+          <h2> Capture and Share <br>
+               the World's Moments </h2>
 
-      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-      Oh yeah, did we mention it's free?
-    </p>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
+
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+
+        Oh yeah, did we mention it's free?
+
+         <section class= "call">
+          <img src = "images/badge-iphone.png">
+          <img src = "images/badge-android.png">
+         </section>
+         </section> <!-- end paragraph -->
+        </section>
      </section>
 
-     <section class= "call">
-      <img src = "images/badge-iphone.png">
-      <img src = "images/badge-android.png">
-     </section>
+
   </section>
 
      <section class = "menu">
