--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <div class="main">
 
-  Capture and Share the World's Moments
+      <img class="movile" src="images/phones.png" width=25%></img>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="box1">
+      </div>
+      <div class="box2">
+        <div>
+          <img class="logo" src="images/brand.png" width=20%></img>
+          <button class="login"><img class="casa" src="images/home.png" width=30%>Log in
+          </img></bottom>
+        </div>
+        <div class="text">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <h1> Capture and Share <br>the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
-  Download on the App Store
-  Get it on Google Play
+          <br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <br><br>Oh yeah, did we mention it's free?
 
-  &copy; 2014 Instagram
+        </div>
+        <img class="download" src="images/badge-iphone.png"width=40%><img class="download"src="images/badge-android.png"width=37%>
+        <img></img>
+      </div>
+    </div>
+      <div class="footer">
+        About Us
+        Support
+        Blog
+        Press
+        API
+        Jobs
+        Privacy
+        Terms
+        &copy; 2014 Instagram
+      </div>
 </body>
 </html>
