--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,34 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+    <img class="image-phones" src="images/phones.png">
+  </header>
 
-  Capture and Share the World's Moments
+  <section>
+    <img class="brand" src="images/brand.png">
+    <button class="log"><img src="images/home.png">Login</button>
+  </section> 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="content-text">
+    <h1>Capture and Share  <br/> the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+    <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="badges">
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
 
-  &copy; 2014 Instagram
+  </section>
+
+  <footer>About Us Support Blog Press API Jobs Privacy Terms <span class="copyright">&copy; 2014 Instagram</span></footer>
 </body>
 </html>
