change footer links to horizontal list

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,7 +16,7 @@
     </div>
    
       <div id="login-button">  
-        <img src="images/home.png"> Log in
+        <img src="images/home.png"> <span>Log in</span>
       </div>
   
     <div id="text-and-badges">
@@ -45,17 +45,18 @@
   
 <div id="footer">
 <nav class="footer-links">
-  About Us |
-  Support |
-  Blog |
-  Press |
-  API |
-  Jobs |
-  Privacy |
-  Terms 
-   
+  <ul>
+  <li>About Us </li>
+  <li>Support </li>
+  <li>Blog </li>
+  <li>Press </li>
+  <li>API </li>
+  <li>Jobs </li>
+  <li>Privacy </li>
+  <li>Terms </li>
+   </ul>
   </nav>
-      &copy; 2014 Instagram
+      <span>&copy; 2014 Instagram</span>
 </div>
  
 </body>
