Link to forked repo

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,8 +14,12 @@
       <div id="caja-parrafo">
         <div id="logo">
           <img src="images/brand.png">
-          <img src="images/home.png">
+          <div id="login">
+            <img src="images/home.png"><strong> Log in</strong></img>
+
+          </div>
         </div>
+
         <div id="parrafo">
 
           <h1>Capture and Share the World's Moments</h1>
