--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,65 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="toplayer">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="maincontainer">
+    <div class="phonecontainer">
+      <img src="./images/phones.png" alt="">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="rightsidecontainer">
+      <div class="logocontainer">
+        <img src="./images/brand.png" alt="">
+       </div>
+     <div class="button">
+       <div class="homeicon">
+       <img src="./images/home.png" alt="">
+     </div>
+     <div class="logintext">
+       <strong> Log in </strong>
+     </div>
+     </div>
+     <div class="textcontainer">
+     <h1> Capture and Share the World's Moments </h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
+
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
   Oh yeah, did we mention it's free?
 
   Download on the App Store
   Get it on Google Play
+</div>
+<div class="buttonholders">
+<img src="./images/badge-iphone.png" alt="">
+<img src="./images/badge-android.png" alt="">
+</div>
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="footermenu">
+      <ul>
+      <h3><li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </h3>
+    <h4><li>&copy; 2014 Instagram</li></h4>
+  </ul>
+    </div>
+  </div>
 
-  &copy; 2014 Instagram
+
+</footer>
 </body>
 </html>
