--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+  </header>
 
-  Capture and Share the World's Moments
+  <main>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="phone">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section>
+      <div class="title">
+          <img class="brand" src="images/brand.png" alt="">
 
-  Oh yeah, did we mention it's free?
+          <div class="aside">
+            <img class="login" src="images/home.png" alt="Log in">
+            <span>Log In</span>
+          </div>
 
-  Download on the App Store
-  Get it on Google Play
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <article>
+        <div class="texto">
+          <h2>Capture and Share <br> the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>
+            way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post
+            to Instagram &mdash; it's that easy. You can even share to
+            Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <img class="low-img" src="images/badge-iphone.png" alt="">
+          <img class="low-img" src="images/badge-android.png" alt="">
+        </div>
+      </article>
 
-  &copy; 2014 Instagram
+    </section>
+    <footer>
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+
+      &copy; 2014 Instagram
+</footer>
+</main>
 </body>
 </html>
