--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,49 +5,61 @@
   <title>Instagram</title>
 </head>
 <body>
-  <div id="bluetop">
+  <div id="container">
+    <div id="top">
+      <div id="left-side">
+        <img src="images/phones.png"/>
+      </div>
+      <div id="right-side">
+        <header>
+          <div id="left">
+            <img src="images/brand.png">
+          </div>
+          <div id="right">
+            <div id="log">
+              <img src="images/home.png" alt="Log in">
+              <span>Log in</span>
+              </img>
+            </div>
+          </div>
+        </header>
+        <main>
+          <h1>
+            Capture and Share<br> the World's Moments
+          </h1>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </main>
+        <div id="stores-logos">
+            <div id="apple-logo">
+              <img src="images/badge-iphone.png" alt="iphone">
+            </div>
+            <div id="android-logo">
+              <img src="images/badge-android.png" alt="iphone">
+            </div>
+        </div>
+      </div>
+    </div>
+    <div id="bottom">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
 
-  <div id="phones-photo">
-    <img src="images/phones.png"/>
-  </div>
-  <div id="brand">
-    <img src="images/brand.png"/>
-    <div id="house">
-      <img src="images/home.png">
     </div>
   </div>
-  <div>
-
-  </div>
-  <div id="text">
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-</div>
-
-  <div >
-
-    Download on the App Store
-    Get it on Google Play
-
-    About Us
-    Support
-    Blog
-    Press
-    API
-    Jobs
-    Privacy
-    Terms
-
-    &copy; 2014 Instagram
-
-  </div>
-</div>
 </body>
 </html>
