--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
+
+<div class="bgtile">
+  <img src="./images/bgtile.png">
+</div>
+
   Instagram
 
-  Capture and Share the World's Moments
+<h2> Capture and Share the World's Moments </h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+
+</p>
 
   Download on the App Store
   Get it on Google Play
