all images upload

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,17 +10,37 @@
   <img src="./images/bgtile.png">
 </div>
 
-  Instagram
+<div class="instaLogo">
+  <img src="./images/brand.png" alt="Instagram">
+  <img src="./images/home.png">
+</div>
 
-<h2> Capture and Share the World's Moments </h2>
+<div class="phones">
+  <img src="./images/phones.png">
+</div>
 
-<p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="paragraph">
+  <div class="frame">
+    <img src="./images/frame.png">
+  </div>
+    <div class="textoprincipal">
+      <h2>
+        Capture and Share the World's Moments
+      </h2>
+      <p>
+      Instagram is a fast, beautiful and fun way to share your life with friends and family. <br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
 
-  Oh yeah, did we mention it's free?
+      Oh yeah, did we mention it's free?
 
-</p>
+      </p>
+      <div class="appDownloadImg">
+        <img src="./images/badge-iphone.png">
+        <img src="./images/badge-android.png">
+    </div>
+  </div>
+</div>
 
   Download on the App Store
   Get it on Google Play
