trying give a good position to everything

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,9 +10,17 @@
   <img src="./images/bgtile.png">
 </div>
 
-<div class="instaLogo">
-  <img src="./images/brand.png" alt="Instagram">
-  <img src="./images/home.png">
+<div id="norte">
+
+  <div class="instaLogo">
+    <img src="./images/brand.png" alt="Instagram">
+  </div>
+
+  <div class="loginButton">
+    <img src="./images/home.png">
+    <p> Log in
+    </p>
+  </div>
 </div>
 
 <div class="phones">
