--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,900" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
 <body>
-  Instagram
+      <div class="background">
+          <div class="phone">
+              <img src="images/phones.png">
+          </div>
+          <div class="content">
+            <img alt="Instagram" class="logo" src="images/brand.png">
+            <a class="btn-login" href="#"><img src="images/home.png">Log in</a>
 
-  Capture and Share the World's Moments
+            <div class="whitebg">
+                <h1>Capture and Share<br>the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-  Oh yeah, did we mention it's free?
+                  Oh yeah, did we mention it's free?
+                </p>
 
-  Download on the App Store
-  Get it on Google Play
+  <img alt="Download on the App Store" class="logo" src="images/badge-iphone.png">
+  <img class="googlePlay" alt="Get it on Google Play" src="images/badge-android.png">
+      </div>
+    </div>
+    <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>      &copy; 2014 Instagram</li>
+    </ul>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </footer>
+      </div>
 
-  &copy; 2014 Instagram
+
 </body>
 </html>
