--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blueBackground">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="insta">
+      <img src="images/brand.png" alt="">
+      <span class="logoHome"><img src="images/home.png" alt=""> Log in</span>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="left">
+      <img src="images/phones.png" alt="">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+    </div>
+
+
+
+    <div class="right">
+      <h1>Capture and Share <br> the World's Moments</h1>
+
+
+      <p>Instagram is as <strong> fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family</p>
+
+      <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+      <p>Oh yeah, did we mention it's free?</p>
+
+      <p>
+        <img src="images/badge-iphone.png" alt="">
+        <img class="secImg" src="images/badge-android.png" alt="">
+      </p>
+    </div>
+  </div>
+
+
+  <div class="footer">
+
+    <nav>
+
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <a href="#">&copy; 2014 Instagram</a>
+
+    </nav>
+  </div>
+
 </body>
+
 </html>
