Done level ninja 1

--- a/starter-code/instagramClone.html
+++ b/starter-code/instagramClone.html
@@ -70,7 +70,7 @@
   <span> <a href="https://www.google.es/" target="_blank"> Jobs </a> </span>
   <span> <a href="https://www.google.es/" target="_blank"> Privacy </a> </span>
   <span> <a href="https://www.google.es/" target="_blank"> Terms </a> </span>
-  <span> &copy; 2014 Instagram </span>
+  <span class="instaFooter"> &copy; 2014 Instagram </span>
 
   </div>
 </footer>
