--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="background-blue"> </div>
+  <main>
+    <div class="wrapper">
+      <section class="aside-right">
+        <div class="title">
+          <img src="images/brand.png">
+          <div class="button-log-in">
+            <img src="images/home.png">
+            <span>Log In</span>
+          </div>
+        </div>
+        <div class="box-description">
+          <h1> Capture and Share the World's Moments </h1>
+          <p>
+            Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.
+            <br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br><br> Oh yeah, did we mention it's free?
+          </p>
+          <div class="">
+            <img src="images/badge-iphone.png">
+            <img src="images/badge-android.png">
+          </div>
+        </div>
+      </section>
+      <div class="aside-left">
+        <img src="images/phones.png">
+      </div>
+    </div>
+  </main>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <div class="grid-container">
+      <ul class="horizlist ">
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li id="copy-instagram">&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </div>
+  </footer>
 </body>
+
 </html>
