--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta name="viewport" content="width:device-width" />
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <div class="top-bg"></div>
+    <div class="landing-container">
+      <div class="image-col float">
+        <img src="images/phones.png" />
+      </div>
+      <div class="content-col float">
+        <img id="logo float" src="images/brand.png" />
+        <div class="button float-right">
+          <img src="images/home.png" class="home-graphic float" />
+          <p class="login-text float-right">Log In</p>
+        </div>
+        <div class="text-box">
+          <h2>Capture and Share<br />the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to
+            share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to
+            transform its look and feel, then post to Instagram &mdash;
+            it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+            It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" />
+            <img src="images/badge-android.png" />
+        </div>
+      </div>
+      <div class="footer">
+        <a>about us</a>
+        <a>support</a>
+        <a>blog</a>
+        <a>press</a>
+        <a>API</a>
+        <a>jobs</a>
+        <a>privacy</a>
+        <a>terms</a>
+        <a>&copy; 2014 Instagram</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
