--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  <div class="top">
+      <img class="iphone-img" src="images/phones.png" />
+  </div>
+    <div class="main-content">
 
-  Capture and Share the World's Moments
+      <img class="branding-img" src="images/brand.png" />
+      <button class="log-in-btn">Log In</button>
+      <div class="white-frame"></div>
+      <h1 class="main-title">Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="text-content">
+      <p>
+        Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br />
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br />Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br />
 
-  Oh yeah, did we mention it's free?
+        <br />Oh yeah, did we mention it's free?<br />
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+      </p>
+      <a href="#"><img class="" title="Download on the App Store" src="images/badge-iphone.png" /></a>
+    <a href="#"><img class="" title="Get it on Google Play" src="images/badge-android.png" /></a>
+    </div>
+    </div>
+
 </body>
+<footer>
+
+  <span>About Us</span>
+  <span>Support</span>
+  <span>Blog</span>
+  <span>Press</span>
+  <span>API</span>
+  <span>Jobs</span>
+  <span>Privacy</span>
+  <span>Terms</span>
+  <span id="copyright">&copy; 2014 Instagram</span>
+</footer>
 </html>
