--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="header">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="main">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="phones items">
+        <img src="images/phones.png">
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="brand items">
+        <img src="images/brand.png">
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="home items">
+        <img src="images/home.png"> Log In
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="container">
+        <span class="capture-and-share">Capture and Share<br>the World's Moments</span>
 
-  &copy; 2014 Instagram
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+          it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br> Oh yeah, did we mention it's free?
+        </p>
+        <br>
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+
+      </div>
+    </div>
+
+    <div class="footer">
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a> &copy; 2014 Instagram
+    </div>
+  </div>
 </body>
+
 </html>
