--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/Users/nik.echenique/code/labs/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="dark-blue">
+    </div>
+  <div class="phones">
+    </div>
+  <div class="logo">
+    </div>
+  <div class="text-box-background">
+    <div class="words">
+      <h3>Capture and Share the World's Moments</h3>
 
-  Capture and Share the World's Moments
+      <p class="main-text">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <P class="main-text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p class="main-text">Oh yeah, did we mention it's free?</p>
+        </div>
+    </div>
+  <div class="apple-store">
+    </div>
+  <div class="google-store">
+    </div>
+  <div class="log-in">
+      <div class="house">
+        </div>
+      <p class= "log-in-text">log in</p>
+    </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer>
+  <p class="footer">
+  <span class="sub-footer">About Us</span>
+  <span class="sub-footer">Support</span>
+  <span class="sub-footer">Blog</span>
+  <span class="sub-footer">Press</span>
+  <span class="sub-footer">API</span>
+  <span class="sub-footer">Jobs</span>
+  <span class="sub-footer">Privacy</span>
+  <span class="sub-footer">Terms</span>
+  <span class="copy">&copy; 2014 Instagram</span>
+</p>
+</footer>
 </body>
 </html>
