add bold words, decrease logo size

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,15 +20,15 @@
         </div>
         <div class="text-box">
           <h2>Capture and Share<br />the World's Moments</h2>
-          <p>Instagram is a fast, beautiful and fun way to
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to
             share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to
             transform its look and feel, then post to Instagram &mdash;
             it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
             It's a new way to see the world.</p>
             <p>Oh yeah, did we mention it's free?</p>
-            <img src="images/badge-iphone.png" />
-            <img src="images/badge-android.png" />
+            <img class="" src="images/badge-iphone.png" />
+            <img class="app-store" src="images/badge-android.png" />
         </div>
       </div>
       <div class="footer">
