--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="utf-8">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <div class="topColor"></div>
+    <div class="container">
+      <div class="phonesImage">
+        <img src="images/phones.png" alt="Iphones">
+      </div>
+      <div class="content">
+      <div class="title">
+        <img src="images/brand.png" alt="Instagram">
+      </div>
+      <div class="loginButton">
+        <button"www.google.com">
+          <img src="images/home.png" alt="Log In Button">
+          Log in</button>
 
-  Capture and Share the World's Moments
+      </div>
+      <div class="textFrame">
+      <div class="text">
+        <h3>Capture and Share the World's Moments</h3>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="appStoreButton">
+        <img src="images/badge-iphone.png" alt="App Store">
+      </div>
+      <div class="googlePlayButton">
+        <img src="images/badge-android.png" alt="Play Store">
+      </div>
+    </div>
+    </div>
+      <div class="nav">
+        <a href="About Us">About Us</a>
+        <a href="Support">Support</a>
+        <a href="Blog">Blog</a>
+        <a href="Press">Press</a>
+        <a href="API">API</a>
+        <a href="Jobs">Jobs</a>
+        <a href="Privacy">Privacy</a>
+        <a href="Terms">Terms</a>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      &copy; 2014 Instagram
+    </div>
+    </div>
+  </body>
 </html>
